--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -19,5 +19,17 @@
   "edit": "تعديل",
   "delete": "حذف",
   "editTask": "تعديل التاسك",
-  "update": "تعديل"
+  "update": "تعديل",
+  "name":"الاسم",
+  "email":"الايميل",
+  "pass":"الرقم السري",
+  "phone":"الهاتف",
+  "create":"انشئ حساب",
+  "check":"هل لديك حساب..؟ تسجيل الدخول",
+  "forget":"هل نسيت كلمه السر",
+  "check2":"ليس لديك حساب..؟ انشئ حساب",
+  "login":"تسجيل الدخول",
+  "invalid": "غير صحيح",
+  "hi": "اهلا"
+
 }
