--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -19,5 +19,16 @@
   "edit": "Edit",
   "delete": "Delete",
   "editTask": "Edit Task",
-  "update": "Update"
+  "update": "Update",
+  "name":"Name",
+  "email":"Email",
+  "pass":"Password",
+  "phone":"Phone",
+  "create":"Create Account",
+  "check":"Are you have an account..? Login",
+  "forget":"Forget Password..?",
+  "check2":"you not have an account..? Create Account",
+  "login":"Login",
+  "invalid": "invalid",
+  "hi": "Hi"
 }
